added coming soon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         A decentralised organisation platform<br />
         based on EOSIO, by
         <a href="https://johnwilliamson.io">John Williamson</a>.
+        <br />
+        Coming Soon.
       </p>
     </header>
 
